# unique-id-generator-app

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py  snowflake.py
tests/: test_snowflake.py
